--- a/app/src/main/res/drawable/circle_button.xml
+++ b/app/src/main/res/drawable/circle_button.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <size android:height="100dp" android:width="100dp"/>
-    <solid android:color="@color/teal_700"/>
+    <solid android:color="@color/black"/>
 
     <corners android:radius="50dp"/>
 </shape>
