--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,31 +8,61 @@
     tools:context=".MainActivity">
         />
     <!--login admin button-->
-    <Button
-        android:id="@+id/admin_button"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:color="#98796F"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="280dp"
-        android:layout_marginEnd="130dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/circle_button"
-        android:text="admin"
-        />
 
     <!--login user button-->
+
     <Button
         android:id="@+id/user_button"
-        android:layout_width="101dp"
-        android:layout_height="102dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="400dp"
-        android:layout_marginEnd="130dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/circle_button"
+        android:layout_width="75dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="370dp"
+        android:layout_centerHorizontal="true"
+        android:backgroundTintMode="add"
         android:text="user" />
 
+    <Button
+        android:id="@+id/admin_button"
+        android:layout_width="86dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/user_phone"
+        android:layout_centerHorizontal="true"
+        android:text="admin" />
+
+    <EditText
+        android:id="@+id/user_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/user_button"
+        android:layout_centerHorizontal="true"
+        android:hint="enter phone number"
+        android:outlineSpotShadowColor="@color/black"
+        android:inputType="textPersonName" />
+
+    <ImageView
+        android:id="@+id/facebook"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/admin_button"
+        android:src="@drawable/facebook" />
+
+    <ImageView
+        android:id="@+id/whatsapp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/admin_button"
+        android:layout_toLeftOf="@id/facebook"
+        android:src="@drawable/whatsapp_icon" />
+
+    <ImageView
+        android:id="@+id/instagram"
+        android:layout_width="62dp"
+        android:layout_height="38dp"
+        android:layout_below="@id/admin_button"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="9dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="114dp"
+        android:layout_toRightOf="@id/facebook"
+        android:src="@drawable/instagram" />
 </RelativeLayout>
