--- a/app/src/main/res/layout/client_order_screen.xml
+++ b/app/src/main/res/layout/client_order_screen.xml
@@ -11,8 +11,10 @@
         android:id="@+id/acne"
         android:layout_width="142dp"
         android:layout_height="40dp"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:drawableEnd="@drawable/acne_icon"
         android:text="acne" />
 
     <Button
@@ -21,6 +23,8 @@
         android:layout_height="40dp"
         android:layout_marginLeft="200dp"
         android:layout_marginTop="10dp"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:drawableEnd="@drawable/haircut_icon"
         android:text="haircut" />
 
     <Button
@@ -29,8 +33,9 @@
         android:layout_height="40dp"
         android:layout_below="@id/haircut"
         android:layout_marginLeft="20dp"
-
+        android:backgroundTint="@android:color/holo_blue_light"
         android:backgroundTintMode="add"
+        android:drawableEnd="@drawable/beard_icon"
         android:text="beard"
         android:visibility="visible" />
 
@@ -39,34 +44,56 @@
         android:layout_width="142dp"
         android:layout_height="40dp"
         android:layout_below="@id/haircut"
+        android:backgroundTint="@android:color/holo_blue_light"
         android:layout_marginLeft="200dp"
-        android:text="beard" />
+        android:drawableEnd="@drawable/facecare_icon"
+        android:text="facecare" />
+
 
     <Button
         android:id="@+id/mySlots"
         android:layout_width="142dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="200dp"
-        android:layout_below="@id/beard"
-        android:layout_centerHorizontal="true"
-        android:text="show my appointments" />
-
-        />
+        android:layout_height="50dp"
+        android:layout_below="@id/calendarView2"
+        android:layout_marginLeft="9dp"
+        android:layout_marginTop="0dp"
+        android:layout_toRightOf="@+id/listView"
+        android:backgroundTint="#04dbcd"
+        android:text="my appointments"
+        android:textSize="10dp" />
 
     <CalendarView
         android:id="@+id/calendarView2"
+        style="@android:style/Widget.Material.CalendarView"
         android:layout_width="400dp"
         android:layout_height="300dp"
-
         android:layout_below="@id/classic_facial"
-        android:maxDate="01/12/2022"
-        android:minDate="01/12/2022" />
+        android:animateLayoutChanges="false"
+        android:animationCache="false"
+        android:backgroundTint="#322525"
+        android:backgroundTintMode="add"
+        android:fadeScrollbars="false"
+        android:maxDate="01/12/2023"
+        android:minDate="01/12/202"
+        android:selectedWeekBackgroundColor="#684646"
+        android:verticalScrollbarPosition="defaultPosition"
+        android:visibility="visible"
+        android:weekDayTextAppearance="@style/TextAppearance.AppCompat.Body2" />
 
     <ListView
-        android:id = "@+id/listView"
-        android:layout_width="wrap_content"
-        android:layout_height="170dp"
+        android:id="@+id/listView"
+        android:layout_width="210dp"
+        android:layout_height="180dp"
         android:layout_below="@+id/calendarView2"
-        android:background="@color/cardview_light_background"
+        android:background="@drawable/gradient_normal" />
+
+    <ListView
+        android:id = "@+id/listCancelOrder"
+        android:layout_width="210dp"
+        android:layout_height="140dp"
+        android:layout_below="@+id/mySlots"
+        android:layout_toRightOf="@id/listView"
+        android:background="@drawable/gradient_normal"
+
         />
 </RelativeLayout>
