--- a/app/src/main/res/layout/client_order_screen.xml
+++ b/app/src/main/res/layout/client_order_screen.xml
@@ -52,14 +52,29 @@
 
     <Button
         android:id="@+id/mySlots"
-        android:layout_width="142dp"
+        android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_below="@id/calendarView2"
-        android:layout_marginLeft="9dp"
-        android:layout_marginTop="0dp"
-        android:layout_toRightOf="@+id/listView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="-1dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginRight="100dp"
+        android:layout_marginBottom="10dp"
         android:backgroundTint="#04dbcd"
-        android:text="my appointments"
+        android:text="appointments"
+        android:textSize="10dp" />
+
+    <Button
+        android:id="@+id/reset"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/calendarView2"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="68dp"
+        android:layout_toLeftOf="@+id/mySlots"
+        android:backgroundTint="#04dbcd"
+        android:text="reset"
         android:textSize="10dp" />
 
     <CalendarView
@@ -82,18 +97,18 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="210dp"
-        android:layout_height="180dp"
-        android:layout_below="@+id/calendarView2"
-        android:background="@drawable/gradient_normal" />
-
-    <ListView
-        android:id = "@+id/listCancelOrder"
-        android:layout_width="210dp"
+        android:layout_width="400dp"
         android:layout_height="140dp"
         android:layout_below="@+id/mySlots"
-        android:layout_toRightOf="@id/listView"
-        android:background="@drawable/gradient_normal"
+        android:background="@drawable/gradient_normal" />
 
-        />
+<!--    <ListView-->
+<!--        android:id = "@+id/listCancelOrder"-->
+<!--        android:layout_width="210dp"-->
+<!--        android:layout_height="140dp"-->
+<!--        android:layout_below="@+id/mySlots"-->
+<!--        android:layout_toRightOf="@id/listView"-->
+<!--        android:background="@drawable/gradient_normal"-->
+
+<!--        />-->
 </RelativeLayout>
