--- a/app/src/main/res/layout/activity_manage_appointments.xml
+++ b/app/src/main/res/layout/activity_manage_appointments.xml
@@ -40,4 +40,13 @@
         android:textSize="18dp"
         android:textStyle="bold"
         />
+
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_marginTop="280dp"
+        android:visibility="invisible"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
