--- a/app/src/main/res/layout/activity_admin_view.xml
+++ b/app/src/main/res/layout/activity_admin_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/admin_view"
-    tools:context=".admin_view">
+    tools:context=".AdminView">
 
     <Button
         android:id="@+id/weekly_workplan"
