--- a/app/src/main/res/layout/client_order_screen.xml
+++ b/app/src/main/res/layout/client_order_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/client_order_screen"
-    tools:context=".MainActivity">
+    tools:context=".MainScreen">
 
     <Button
         android:id="@+id/acne"
