--- a/app/src/main/res/layout/activity_admin_schedule_clients.xml
+++ b/app/src/main/res/layout/activity_admin_schedule_clients.xml
@@ -7,20 +7,75 @@
     android:background="@drawable/admin_view"
     tools:context=".Adminworkplan">
 
-    <ListView
-        android:id="@+id/listview2"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/calendarView4"
-        android:layout_width="350dp"
-        android:layout_height="200dp"
-        android:background="@drawable/gradient_normal" />
+    <Button
+        android:id="@+id/acneAdmin"
+        android:layout_width="142dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="#a67041"
+        android:drawableEnd="@drawable/acne_icon"
+        android:text="acne" />
+
+    <Button
+        android:id="@+id/haircutAdmin"
+        android:layout_width="142dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="#a67041"
+        android:drawableEnd="@drawable/haircut_icon"
+        android:text="haircut" />
+
+    <Button
+        android:id="@+id/beardAdmin"
+        android:layout_width="142dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/haircutAdmin"
+        android:layout_marginLeft="20dp"
+        android:backgroundTint="#a67041"
+        android:backgroundTintMode="add"
+        android:drawableEnd="@drawable/beard_icon"
+        android:text="beard"
+        android:visibility="visible" />
+
+    <Button
+        android:id="@+id/classic_facialAdmin"
+        android:layout_width="142dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/haircutAdmin"
+        android:backgroundTint="#a67041"
+        android:layout_marginLeft="200dp"
+        android:drawableEnd="@drawable/facecare_icon"
+        android:text="facecare" />
+
+
+    <Button
+        android:id="@+id/mySlotsAdmin"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/calendarViewAdmin"
+        android:layout_marginStart="200dp"
+        android:backgroundTint="#a67041"
+        android:text="appointments"
+        />
+
+    <Button
+        android:id="@+id/resetAdmin"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/calendarViewAdmin"
+        android:layout_marginStart="68dp"
+        android:backgroundTint="#a67041"
+        android:text="reset"
+        />
 
     <CalendarView
-        android:id="@+id/calendarView4"
+        android:id="@+id/calendarViewAdmin"
         style="@android:style/Widget.Material.CalendarView"
         android:layout_width="400dp"
         android:layout_height="300dp"
+        android:layout_below="@id/classic_facialAdmin"
         android:animateLayoutChanges="false"
         android:animationCache="false"
         android:backgroundTint="#322525"
@@ -32,21 +87,20 @@
         android:verticalScrollbarPosition="defaultPosition"
         android:visibility="visible"
         android:weekDayTextAppearance="@style/TextAppearance.AppCompat.Body2" />
-    <TextView
-        android:layout_width="350dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/listview2"
-        android:text="Please click on a treatment to cancel it"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        />
 
+    <ListView
+        android:id="@+id/listViewAdmin"
+        android:layout_width="400dp"
+        android:layout_height="140dp"
+        android:layout_below="@+id/mySlotsAdmin"
+        android:background="#bea18f" />
     <ProgressBar
-        android:id="@+id/progressBar2"
+        android:id="@+id/ProgressAdmin"
         style="?android:attr/progressBarStyle"
-        android:layout_marginTop="280dp"
-        android:visibility="invisible"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="425dp"
+        android:visibility="invisible"
+        />
 </RelativeLayout>
