--- a/app/src/main/res/layout/activity_admin_view.xml
+++ b/app/src/main/res/layout/activity_admin_view.xml
@@ -38,10 +38,9 @@
     <Button
         android:id="@+id/updateClientAppointment"
         android:layout_width="200dp"
-        android:layout_below="@+id/ManageAppointments"
         android:layout_height="100dp"
-        android:text="update Appoinment"
-        android:textStyle="bold"
+        android:layout_below="@+id/ManageAppointments"
         android:layout_centerHorizontal="true"
-        />
+        android:text="Add Appoinments"
+        android:textStyle="bold" />
 </RelativeLayout>
