--- a/app/src/main/res/layout/activity_admin_services.xml
+++ b/app/src/main/res/layout/activity_admin_services.xml
@@ -7,73 +7,83 @@
     android:background="@drawable/admin_view"
     tools:context=".AdminServices">
 
-    <Button
-        android:id="@+id/haircutService"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:text="haircut"
+    <EditText
+        android:id="@+id/service1"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:textStyle="bold"
         android:textSize="13dp"
         android:layout_marginLeft="30dp"
         android:backgroundTint="#a67041"
-        android:layout_marginTop="25dp"
 
-        />
-    <Button
-        android:id="@+id/acneService"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_marginTop="25dp"/>
+
+    <ImageButton
+        android:id="@+id/button1"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/add_button"
+        android:layout_toRightOf="@id/service1"
+        android:layout_marginTop="40dp" />
+
+    <EditText
+        android:id="@+id/service2"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:textSize="13dp"
-        android:text="acne"
+        android:backgroundTint="#a67041"
         android:layout_marginLeft="30dp"
-        android:backgroundTint="#a67041"
-        android:layout_below="@+id/haircutService"
+        android:layout_below="@+id/service1"
         />
+    <ImageButton
+        android:id="@+id/button2"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/add_button"
+        android:layout_toRightOf="@id/service1"
+        android:layout_marginTop="80dp" />
 
-    <Button
-        android:id="@+id/beardService"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+    <EditText
+        android:id="@+id/service3"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:textSize="13dp"
-        android:text="beard"
         android:layout_marginLeft="30dp"
-        android:backgroundTint="#a67041"
-        android:layout_below="@+id/acneService"
-        />
+        android:layout_below="@+id/service2" />
 
-    <Button
-        android:id="@+id/faceCareService"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+    <ImageButton
+        android:id="@+id/button3"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/add_button"
+        android:layout_toRightOf="@id/service1"
+        android:layout_marginTop="120dp" />
+
+    <EditText
+        android:id="@+id/service4"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:textSize="13dp"
-        android:text="faceCare"
         android:layout_marginLeft="30dp"
-        android:backgroundTint="#a67041"
-        android:layout_below="@+id/beardService"
+        android:layout_below="@+id/service3"
         />
 
-    <Button
-        android:id="@+id/perfectService"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="25dp"
-        android:layout_marginRight="60dp"
-        android:backgroundTint="#a67041"
-        android:text="Haircut + hot towel + wax"
-        android:textSize="13dp"
-        android:textStyle="bold" />
+    <ImageButton
+        android:id="@+id/button4"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/add_button"
+        android:layout_toRightOf="@id/service1"
+        android:layout_marginTop="160dp" />
+
 
 
     <Button
         android:id="@+id/currentServices"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="60dp"
-        android:layout_below="@+id/perfectService"
+        android:layout_below="@+id/service4"
         android:backgroundTint="#a67041"
         android:text="current selected Services"
         android:textSize="13dp"
@@ -81,11 +91,9 @@
 
     <Button
         android:id="@+id/addServices"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="60dp"
         android:layout_below="@+id/currentServices"
         android:backgroundTint="#a67041"
         android:text="add Services"
@@ -94,11 +102,9 @@
 
     <Button
         android:id="@+id/resetServices"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="60dp"
         android:layout_below="@+id/addServices"
         android:text="reset"
         android:backgroundTint="#a67041"
