--- a/app/src/main/res/layout/client_order_screen.xml
+++ b/app/src/main/res/layout/client_order_screen.xml
@@ -48,23 +48,23 @@
 
     <Button
         android:id="@+id/mySlots"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        android:layout_width="160dp"
+        android:layout_height="40dp"
         android:layout_below="@id/calendarView2"
-        android:layout_marginStart="200dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp"
         android:backgroundTint="#a67041"
-        android:text="appointments"
-        />
+        android:text="appointments" />
 
     <Button
         android:id="@+id/reset"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        android:layout_width="160dp"
+        android:layout_height="40dp"
         android:layout_below="@id/calendarView2"
-        android:layout_marginStart="68dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
         android:backgroundTint="#a67041"
-        android:text="reset"
-      />
+        android:text="reset" />
 
     <CalendarView
         android:id="@+id/calendarView2"
